--- a/index.html
+++ b/index.html
@@ -105,6 +105,134 @@
             </div>
         </section>
         <!-- carosoul section end -->
+        <!-- Courses section start -->
+        <section class="container mt-5">
+            <h1 class="text-center fw-bold">Discover Our Popular<br> Courses
+            </h1>
+            <p class="text-center mb-4">This is the courses section where you can find your desire course to
+                learn.<br>This will help you to prosper in life.</p>
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text">This is the course which is based on the fundamental of UI/UX
+                                        design.It will help you to build up your carrer</p>
+                                    <p class="card-text text-primary fw-semibold">Price: $25</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Javascript Basic to advanced
+                                    </h5>
+                                    <p class="card-text">This is the course which is based on the fundamental of
+                                        javascript .It will help you to build up your carrer</p>
+                                    <p class="card-text text-primary fw-semibold">Price: $25</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fullstack Web Development
+                                    </h5>
+                                    <p class="card-text">This is the course which is based on the fundamental Full sack
+                                        web development.It will help you to build up your carrer</p>
+                                    <p class="card-text text-primary fw-semibold">Price: $35</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Digital Marketing
+                                    </h5>
+                                    <p class="card-text">This is the course which is based on the fundamental of digital
+                                        marketing.It will help you to build up your carrer</p>
+                                    <p class="card-text text-primary fw-semibold">Price: $10</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Photography Basic Rules
+
+                                    </h5>
+                                    <p class="card-text">This is the course which is based on the fundamental of
+                                        photography basic rule.It will help you to build up your carrer</p>
+                                    <p class="card-text text-primary fw-semibold">Price: $15</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">PMotion Graphics
+                                    </h5>
+                                    <p class="card-text">This is the course which is based on the fundamental of Motion
+                                        Graphics.It will help you to build up your carrer</p>
+                                    <p class="card-text text-primary fw-semibold">Price: $20</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <h4 class="btn btn-primary  px-4 py-2">View All</h4>
+            </div>
+
+        </section>
+        <!-- Courses section end -->
 
     </main>
     <script src="bootstrap/bootstrap.min.js"></script>
