working section added

--- a/index.html
+++ b/index.html
@@ -233,6 +233,38 @@
 
         </section>
         <!-- Courses section end -->
+        <!-- Explore elearning section start -->
+        <section class="container my-5 working-section">
+            <div class="row d-flex align-items-center rounded">
+                <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+                    <img class="img-fluid working-img" src="images/working.png" alt="">
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 p-5">
+                    <div>
+                        <h1>Explore the elearning institution</h1>
+                        <p>This is the future of ourmodern edecation system.Today many of the university take their
+                            class
+                            through various online platform.So we can call it the modern era of learning world.</p>
+                    </div>
+                    <div class="d-flex">
+                        <div class="me-3">
+                            <h1>3.2K+</h1>
+                            <p>Online Course</p>
+                        </div>
+                        <div class="mx-3">
+                            <h1>600+</h1>
+                            <p>Expert member</p>
+                        </div>
+                        <div class="mx-3">
+                            <h1>1.2k+</h1>
+                            <p>rating & review</p>
+                        </div>
+                    </div>
+                    <h1 class="btn btn-primary">Read more</h1>
+                </div>
+            </div>
+        </section>
+        <!-- Explore elearning section end -->
 
     </main>
     <script src="bootstrap/bootstrap.min.js"></script>
