register section added

--- a/index.html
+++ b/index.html
@@ -265,6 +265,55 @@
             </div>
         </section>
         <!-- Explore elearning section end -->
+        <!-- registar section start -->
+        <section class="container  p-5 rounded reg-sec my-5">
+            <div class="row d-flex align-items-center">
+                <div class="col-lg-10 col-md-12 col-sm-12 my-2">
+                    <h1 class="text-white">Ready to join?</h1>
+                    <p class="text-white">This is the section where if you want to<br> join us then you cn register
+                        here.So
+                        that we can collect
+                        your details.</p>
+                </div>
+                <div class="col-lg-2 col-md-12 col-sm-12">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-white text-bg-light text-primary fw-bold text-center"
+                        data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Register
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header border-0">
+                                    <h5 class="modal-title" id="exampleModalLabel">Register</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="mb-3">
+                                        <input type="email" class="form-control  border-info"
+                                            id="exampleFormControlInput1" placeholder="Email">
+                                    </div>
+                                    <div class="mb-3">
+                                        <input type="password" class="form-control border-info"
+                                            id="exampleFormControlInput1" placeholder="password">
+                                    </div>
+                                </div>
+                                <div class="modal-footer border-0">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- registar section end -->
 
     </main>
     <script src="bootstrap/bootstrap.min.js"></script>
