--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- navbar section start -->
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand fs-1 fw-bold" href="#">Pro Edu</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav fw-semibold">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link " aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Courses</a>
@@ -236,10 +236,10 @@
         <!-- Explore elearning section start -->
         <section class="container my-5 working-section">
             <div class="row d-flex align-items-center rounded">
-                <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-3">
                     <img class="img-fluid working-img" src="images/working.png" alt="">
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 p-5">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-5">
                     <div>
                         <h1>Explore the elearning institution</h1>
                         <p>This is the future of ourmodern edecation system.Today many of the university take their
@@ -279,7 +279,7 @@
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-white text-bg-light text-primary fw-bold text-center"
                         data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Register
+                        Register Now
                     </button>
 
                     <!-- Modal -->
@@ -314,8 +314,170 @@
             </div>
         </section>
         <!-- registar section end -->
+        <!-- student section start -->
+        <section class="container my-5">
+            <h2 class="fw-bold  ">Meet Our Successfull Students
+            </h2>
+            <p>These people are complete their course in the right time .<br>Now the are successfull in their career</p>
+            <div class="row row-cols-md-2 row-cols-lg-4 row-cols-sm-1 g-4">
+                <div class="col">
+                    <div class="card" style="width: 16rem;">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">John Alex</h5>
+                            <p class="card-text">Graphics Desiner</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 16rem;">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Jannatul Islam</h5>
+                            <p class="card-text">Motion Desiner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 16rem;">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Imran khan</h5>
+                            <p class="card-text">Graphics Desiner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 16rem;">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Naima Naim</h5>
+                            <p class="card-text">Web Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mt-4">
+                <h4 class="btn btn-primary  px-4 py-2">View All</h4>
+            </div>
+        </section>
+        <!-- student section end -->
+        <!-- Question section start -->
+        <section class="container my-5">
+            <h1 class="text-center fw-bold">Frequently Asked Questions</h1>
+            <p class="text-center">You can ask any question if you have in your mind.<br>You can ask us without any
+                hesitation</p>
+
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button text-black fw-semibold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What is the difference between Bootstrap and Tailwind?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            This is the first item's accordion body. It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed text-black fw-semibold" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                            aria-controls="collapseTwo">
+                            What is the difference between Grid and Flex Box?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            This is the second item's accordion body. It is hidden by default, until
+                            the collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed text-black fw-semibold" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                            aria-controls="collapseThree">
+                            What is semantic tag?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            This is the third item's accordion body. It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed text-black fw-semibold" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                            aria-controls="collapseFour">
+                            What is CSS Box model?
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            This is the third item's accordion body. It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Question section end -->
+        <!-- companies section start -->
+        <section class="container  d-lg-block d-sm-none d-md-none d-none companies">
+            <h1 class="text-center fw-bold my-5 mb-4">Trusted by over 800+ companies</h1>
+            <div>
+                <img class="ms-4" src="images/company/company-1.png" alt="">
+                <img class="ms-4" src="images/company/company-2.png" alt="">
+                <img class="ms-4" src="images/company/company-3.png" alt="">
+                <img class="ms-4" src="images/company/company-4.png" alt="">
+                <img class="ms-4" src="images/company/company-5.png" alt="">
+                <img class="ms-4" src="images/company/company-6.png" alt="">
+            </div>
+
+        </section>
+        <!-- companies section end -->
 
     </main>
+    <!-- footer section start -->
+    <footer class="bg-dark mt-5 p-5">
+        <div class="footer-sec">
+            <h1 class="text-white fw-bold text-center ">Pro Edu</h1>
+            <p class="text-light text-center">Office 41, Zawaya Buildin, Ghala Muscat,<br>Sultanate of Oman </p>
+            <p class="text-light text-center">Privacy Ploicy | Terms of use</p>
+        </div>
+
+    </footer>
+    <!-- footer section end -->
     <script src="bootstrap/bootstrap.min.js"></script>
 </body>
 
