--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>EdTech</title>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/1594e91de2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -474,6 +475,15 @@
             <h1 class="text-white fw-bold text-center ">Pro Edu</h1>
             <p class="text-light text-center">Office 41, Zawaya Buildin, Ghala Muscat,<br>Sultanate of Oman </p>
             <p class="text-light text-center">Privacy Ploicy | Terms of use</p>
+            <div class="d-flex justify-content-center text-white">
+                <a class="text-center text-white mx-2" href="www.facebook.com"><i
+                        class="fa-brands fa-facebook text white fs-2"></i></a>
+                <a class="text-center text-white mx-2" href="www.twitter.com"><i
+                        class="fa-brands fa-twitter text white fs-2"></i></a>
+                <a class="text-center text-white mx-2" href="www.linedin.com"><i
+                        class="fa-brands fa-linkedin text white fs-2"></i></a>
+            </div>
+
         </div>
 
     </footer>
