change carousol paragraph

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
         <!-- carosoul section start -->
         <section class="container">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -58,33 +58,31 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active ">
+                <div class="carousel-inner ">
+                    <div class="carousel-item active">
                         <div>
-                            <img class="img-fluid" src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-sm-block d-md-block ">
+                            <img class="img-fluid caro-img" src="images/cover/cover-1.png" class="d-block w-100"
+                                alt="...">
+                            <div class="carousel-caption d-sm-block d-md-block">
                                 <div>
-                                    <h1>Get Started Digital Learning</h1>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of
-                                        a page when looking at its layout.
-                                    </p>
-                                    <a class="btn btn-primary py-3 px-4" href="#">Get Started</a>
+                                    <h2>Get Started Digital Learning</h2>
+
+                                    <a class="btn btn-primary py-2 px-4" href="#">Get Started</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item ">
                         <div>
-                            <img class="img-fluid" src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                            <img class="img-fluid caro-img" src="images/cover/cover-3.jpg" class="d-block w-100"
+                                alt="...">
                             <div class="carousel-caption d-sm-block d-md-block ">
                                 <div>
                                     <h1>Get Started Digital Learning</h1>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of
-                                        a page when looking at its layout.
+                                    <p>This is a complete education system which will give you every course what you
+                                        need.
                                     </p>
-                                    <a class="btn btn-primary py-3 px-4" href="#">Get Started</a>
+                                    <a class="btn btn-primary py-2 px-4" href="#">Get Started</a>
                                 </div>
                             </div>
                         </div>
@@ -476,11 +474,11 @@
             <p class="text-light text-center">Office 41, Zawaya Buildin, Ghala Muscat,<br>Sultanate of Oman </p>
             <p class="text-light text-center">Privacy Ploicy | Terms of use</p>
             <div class="d-flex justify-content-center text-white">
-                <a class="text-center text-white mx-2" href="www.facebook.com"><i
+                <a class="text-center text-white mx-2" href="https://www.facebook.com/"><i
                         class="fa-brands fa-facebook text white fs-2"></i></a>
-                <a class="text-center text-white mx-2" href="www.twitter.com"><i
+                <a class="text-center text-white mx-2" href="https://twitter.com/"><i
                         class="fa-brands fa-twitter text white fs-2"></i></a>
-                <a class="text-center text-white mx-2" href="www.linedin.com"><i
+                <a class="text-center text-white mx-2" href="https://www.linkedin.com/"><i
                         class="fa-brands fa-linkedin text white fs-2"></i></a>
             </div>
 
