--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
         <!-- carosoul section end -->
         <!-- Courses section start -->
         <section class="container mt-5">
-            <h1 class="text-center fw-bold">Discover Our Popular<br> Courses
-            </h1>
-            <p class="text-center mb-4">This is the courses section where you can find your desire course to
-                learn.<br>This will help you to prosper in life.</p>
+            <h2 class="text-center fw-bold">Discover Our Popular Courses
+            </h2>
+            <p class="text-center mb-4">This is the courses section where you can find your desire course<br> to
+                learn.This will help you to prosper in life.</p>
             <div class="row">
                 <div class="col-lg-6 col-md-12">
                     <div class="card mb-3" style="max-width: 540px;">
